Bug 367587 - Adding a email without a Type prepends "TYPE:" to the email
Summary: Adding a email without a Type prepends "TYPE:" to the email
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-19 19:39 UTC by Bernhard Scheirle
Modified: 2016-08-20 12:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Scheirle 2016-08-19 19:39:58 UTC
If you add a email to a contact and not select a type (the drop down menu displays "Select..."; Don't touch it) it adds "TYPE:" before the email.



Reproducible: Always

Steps to Reproduce:
1. New contact
2. Name: Example
3. Email: example@example.com
4. Hit OK
5. Look at the email address of the contact

Actual Results:  
Email is "TYPE:example@example.com"

Expected Results:  
Email is "example@example.com"

Version 5.3.0 (QtWebEngine)
* KDE Frameworks 5.25.0
* Qt 5.7.0
* xcb

KDE Neon User Edition
Comment 1 Laurent Montel 2016-08-20 12:29:26 UTC
I confirm it.
I will look at it
Comment 2 Laurent Montel 2016-08-20 12:41:12 UTC
Git commit 65dc0e9ee1b559661e311279e8903533a36dfd70 by Montel Laurent.
Committed on 20/08/2016 at 12:40.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 367587 - Adding a email without a Type prepends "TYPE:" to the email

FIXED-IN: 5.3.1

M  +3    -1    src/editor/generalinfoeditor/mail/mailwidget.cpp

http://commits.kde.org/akonadi-contacts/65dc0e9ee1b559661e311279e8903533a36dfd70