Fix Bug 367587 - Adding a email without a Type prepends "TYPE:" to the email

FIXED-IN: 5.3.1
BUG: 367587